--- a/navigation.html
+++ b/navigation.html
@@ -28,10 +28,10 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="/products/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Presentations <span class="caret"></span></a>
+          <a href="/products/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
           	<li><a href="/products/">All Products</a></li>
-            <li><a href="/products/rdfframework/html/index.htm">RdfFramework</a></li>
+            <li><a href="/products/rdfframework/html/index.html">RdfFramework</a></li>
           </ul>
         </li>  
       </ul>	
