--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
+<!-- <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script> -->
+<script src="/static/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+
+<!-- <script src="/static/bootstrap3/js/bootstrap.js" type="text/javascript"></script> -->
+<script src="/static/assets/js/gsdk-checkbox.js"></script>
+<script src="/static/assets/js/gsdk-radio.js"></script>
+<script src="/static/assets/js/gsdk-switch.js"></script>
+<script src="/static/assets/js/get-shit-done.js"></script>
+
+<script src="assets/js/custom.js"></script>
 <script src="/js/navigation.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
