--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
 <!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
 <div id="kl-nav"></div>
-<!--<div class="row">
+<div class="row">
  <section class="col-md-12 pull-left">
   <div class="well">
   	<ul>
@@ -34,7 +34,7 @@
   </ul>
   </div>
  </section>
-</div>-->
+</div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
