--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 <script src="/static/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 
 <!-- <script src="/static/bootstrap3/js/bootstrap.js" type="text/javascript"></script> -->
-<script src="/static/assets/js/gsdk-checkbox.js"></script>
-<script src="/static/assets/js/gsdk-radio.js"></script>
-<script src="/static/assets/js/gsdk-switch.js"></script>
-<script src="/static/assets/js/get-shit-done.js"></script>
+<script src="/js/gsdk-checkbox.js"></script>
+<script src="/js/gsdk-radio.js"></script>
+<script src="/js/gsdk-switch.js"></script>
+<script src="/js/get-shit-done.js"></script>
 
-<script src="assets/js/custom.js"></script>
+<script src="/js/custom.js"></script>
 <script src="/js/navigation.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
