--- a/navigation.html
+++ b/navigation.html
@@ -49,9 +49,9 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-     <!--<div class="blurred-container">
+     <div class="blurred-container">
             <div class="img-src" style="background-image: url('/static/assets/img/bg.jpg')"></div>
-        </div>-->
+        </div>
     </div><!--  end navbar -->
 
 </div> <!-- end menu-dropdown -->
