--- a/navigation.html
+++ b/navigation.html
@@ -3,7 +3,7 @@
     <!--    
         navbar-default can be changed with navbar-ct-blue navbar-ct-azzure navbar-ct-red navbar-ct-green navbar-ct-orange  
         -->
-        <nav class="navbar navbar-ct-blue navbar-transparent navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-ct-blue navbar-ct-green navbar-fixed-top" role="navigation">
           <div class="alert alert-success hidden">
             <div class="container">
                 <b>Lorem ipsum</b> dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -49,9 +49,9 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-     <div class="blurred-container">
+     <!--<div class="blurred-container">
             <div class="img-src" style="background-image: url('/static/assets/img/bg.jpg')"></div>
-        </div>
+        </div>-->
     </div><!--  end navbar -->
 
 </div> <!-- end menu-dropdown -->
