--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
   <body>
 <!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
 <div id="kl-nav"></div>
-<div class="row">
- <section class="col-md-12 pull-left">
-  <div class="well">
+<div class="main">
+    <div class="container tim-container" style="max-width:800px; padding-top:100px">
   	<ul>
    		<li><a href="/presentations">Presentations</a></li>
-  </ul>
-  </div>
- </section>
+  	</ul>
+	</div>
+    <div class="space"></div>
+<!-- end container -->
 </div>
+<!-- end main -->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
