--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>KnowledgeLinks.io</title>
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-		<link href="/static/bootstrap3/css/bootstrap.css" rel="stylesheet" />
-		<link href="/static/bootstrap3/css/font-awesome.css" rel="stylesheet" />
-		<link href="/static/assets/css/get-shit-done.css" rel="stylesheet" />  
-		<link href="/static/assets/css/demo.css" rel="stylesheet" /> 
+		<link href="/bootstrap3/css/bootstrap.css" rel="stylesheet" />
+		<link href="/bootstrap3/css/font-awesome.css" rel="stylesheet" />
+		<link href="/css/get-shit-done.css" rel="stylesheet" />  
+		<link href="/css/demo.css" rel="stylesheet" /> 
 
 	    <!--     Font Awesome     -->
 	    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -43,7 +43,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
 <!-- <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script> -->
-<script src="/static/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+<script src="/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 
 <!-- <script src="/static/bootstrap3/js/bootstrap.js" type="text/javascript"></script> -->
 <script src="/js/gsdk-checkbox.js"></script>
