--- a/navigation.html
+++ b/navigation.html
@@ -25,6 +25,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
+              	<li>
+              		<a href="/">Home</a>
+              	</li>
                 <li class="dropdown">
 				  <a href="/presentations/" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
 				  <ul class="dropdown-menu">
@@ -40,11 +43,11 @@
 				  </ul>
 				</li>  
               </ul>
-              <ul class="nav navbar-nav navbar-right">
+              <!--<ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Register</a></li>
                     
                     <li><button href="#" class="btn btn-round btn-default">Sign in</button></li>
-               </ul>
+               </ul>-->
               
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
