--- a/navigation.html
+++ b/navigation.html
@@ -52,9 +52,9 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-     <!--<div class="blurred-container">
-            <div class="img-src" style="background-image: url('/static/assets/img/bg.jpg')"></div>
-        </div>-->
+     <div class="blurred-container">
+            <div class="img-src" style="background-image: url('/images/bg.jpg')"></div>
+        </div>
     </div><!--  end navbar -->
 
 </div> <!-- end menu-dropdown -->
