--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 	<div class="container tim-container">
 		<div class="row">
 			<div class="col-md-2">
-				<img src="/images/kl-logo.svg" style="height:192px">
+				<img src="/images/kl-logo.svg" style="height:192px; margin-right:10px">
 			</div>
 			<div class="col-md-10"> 
-			<h1 style="font-size: 6em; margin-botton: 0">KnowledgeLinks.io</h1>
-			<h2>Developing integrated RDF solutions</h2>
+			<h2 style="font-size: 6em; margin-botton: 0">KnowledgeLinks.io</h2>
+			<h3>Developing integrated RDF solutions</h3>
 				<p class="lead">
 					We are committed to developing RDF applications designed to take libraries to the next era. 
 				</p>
