--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                         <li><a href="#">Separated link</a></li>
                       </ul>
                 </li>
+                <li class="dropdown">
+                	<a href="/presentations/" class="dropdown-toggle" data-toggle="dropdown">Presentations <b class="caret"></b></a>
+				  <ul class="dropdown-menu">
+					<li><a href="/presentations/">All Presentations</a></li>
+					<li><a href="/presentations/niso-2015/index.html">NISO - The Semantic Web: What's New and Cool</a></li>
+				  </ul>
+				</li>
                 <li>
                     <a href="javascript:void(0);" data-toggle="search" class="hidden-xs"><i class="fa fa-search"></i></a>
                 </li>
